For some reason, css isn't loading

--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -3,9 +3,8 @@
         <div class="col-12">
 
             <div class="jumbotron">
-                <h1 class="display-3">Login:</h1>
-                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for
-                    calling extra attention to featured content or information.</p>
+                <h1 class="display-3"><strong>Login:</strong></h1>
+                <p class="lead">Please enter your login details to access this site.</p>
                 <br />
                 <form id="signin" name="signin" method="post" action="signin">
                     <div class="form-group row">
@@ -14,8 +13,8 @@
                         <br /><br />
                         <input name="password" type="password" class="form-control"
                             placeholder="Please enter your password" />
-                        <br /><br />
-                        <input class="btn btn-primary" type="submit" value="Sign In" />
+                        <br />
+                        <input class="btn btn-primary mt-4" type="submit" value="Sign In" />
                     </div>
                 </form>
             </div>
