--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="./assets/css/styles.css" type="text/css" />
+    <link rel='stylesheet' href='/assets/css/style.css' type='text/css' />
     <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark blackssss">
-        <img src="./assets/img/tcwa-logo.png" style="width: 160px;" class='mr-2'>
+        <img src="./assets/img/tcwa-logo.png" style="width: 160px;" class='m-3'>
         <a class="navbar-brand" href="#">Truck Center WA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
