--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,22 +1,35 @@
 <div class="container">
-    <div class="row">
-        <div class="col-12">
-
-            <div class="jumbotron">
-                <h1 class="display-3"><strong>Login:</strong></h1>
-                <p class="lead">Please enter your login details to access this site.</p>
-                <br />
+    <div class="d-flex justify-content-center h-100">
+        <div class="card">
+            <div class="card-header">
+                <h3>Sign In</h3>
+            </div>
+            <div class="card-body">
                 <form id="signin" name="signin" method="post" action="signin">
-                    <div class="form-group row">
-                        <input class="text form-control" name="email" type="text"
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-user"></i></span>
+                        </div>
+                        <input type="text" class="form-control" name="email"
                             placeholder="Please enter your email address">
-                        <br /><br />
-                        <input name="password" type="password" class="form-control"
-                            placeholder="Please enter your password" />
-                        <br />
-                        <input class="btn btn-primary mt-4" type="submit" value="Sign In" />
+
+                    </div>
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-key"></i></span>
+                        </div>
+                        <input type="password" class="form-control" name="password"
+                            placeholder="Please enter your password">
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Sign In" class="btn float-right login_btn">
                     </div>
                 </form>
+            </div>
+            <div class="card-footer">
+                <div class="d-flex justify-content-center links">
+                    Don't have an account?<a href="signup" class="links">Sign Up</a>
+                </div>
             </div>
         </div>
     </div>
