--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,2 +1,7 @@
-<h2>Dashboard</h2>
-<h5>Hurray! you are logged in.</h5> 
+<div class="container">
+    <div class="row">
+        <div class="col-12 text-center mt-3">
+            <h1>Welcome to TCWA</h1>
+        </div>
+    </div>
+</div>
