--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -8,7 +8,7 @@
                 <form id="signin" name="signin" method="post" action="signin">
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fa fa-user"></i></span>
+                            <span class="input-group-text"><i class="fa fa-at"></i></span>
                         </div>
                         <input type="text" class="form-control" name="email"
                             placeholder="Please enter your email address">
@@ -16,7 +16,7 @@
                     </div>
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fa fa-key"></i></span>
+                            <span class="input-group-text"><i class="fa fa-lock"></i></span>
                         </div>
                         <input type="password" class="form-control" name="password"
                             placeholder="Please enter your password">
