--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,11 +1,52 @@
-<form id="signup" name="signup" method="post" action="/signup">
-    <label for="email">Email Address</label>
-    <input class="text" name="email" type="email" /><br/>
-    <label for="firstname">Firstname</label>
-    <input name="firstname" type="text" /><br/>
-    <label for="lastname">Lastname</label>
-    <input name="lastname" type="text" /><br/>
-    <label for="password">Password</label>
-    <input name="password" type="password" /><br/>
-    <input class="btn" type="submit" value="Sign Up" />
-</form>
+<div class="container">
+    <div class="d-flex justify-content-center h-100">
+        <div class="card">
+            <div class="card-header">
+                <h3>Create Account</h3>
+            </div>
+            <div class="card-body">
+               <form id="signup" name="signup" method="post" action="/signup">
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-at"></i></span>
+                        </div>
+                        <input type="text" class="form-control" name="email"
+                            placeholder="Please enter your email address">
+
+                    </div>
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-user"></i></span>
+                        </div>
+                        <input type="text" class="form-control" name="firstname"
+                            placeholder="Please enter your first name">
+
+                    </div>
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-user"></i></span>
+                        </div>
+                        <input type="text" class="form-control" name="lastname"
+                            placeholder="Please enter your last name">
+
+                    </div>
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-lock"></i></span>
+                        </div>
+                        <input type="password" class="form-control" name="password"
+                            placeholder="Please enter your password">
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Sign Up" class="btn float-right login_btn">
+                    </div>
+                </form>
+            </div>
+            <div class="card-footer">
+                <div class="d-flex justify-content-center links">
+                    Already have an account?<a href="signin" class="links">Sign In</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
