Error messages now displaying on login

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -2,6 +2,11 @@
     background-color: black;
 }
 
+.error {
+    color: #feca0a;
+    padding-top: 5px;
+}
+
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html, body {
