--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -24,6 +24,7 @@
                     <div class="form-group">
                         <input type="submit" value="Sign In" class="btn float-right login_btn">
                     </div>
+                    <div class="error">{{error}}</div>
                 </form>
             </div>
             <div class="card-footer">
