--- a/views/layouts/users.handlebars
+++ b/views/layouts/users.handlebars
@@ -23,11 +23,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="dashboard">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="users">Users</a>
+                    <a class="nav-link" href="dashboard">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="users">Users <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="logout">Logout</a>
