--- a/public/assets/css/backend.css
+++ b/public/assets/css/backend.css
@@ -1,20 +1,4 @@
-.bg-black {
-    background-color: black;
-}
-
 @import url('https://fonts.googleapis.com/css?family=Numans');
-
-html, body {
-    background-color: #e6e7e9;  
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: calc(100vh - 190px);
-    font-family: 'Numans', sans-serif;
-}
-
 .container {
     height: 100%;
     align-content: center;
@@ -23,43 +7,38 @@ html, body {
 .card {
     margin-top: auto;
     margin-bottom: auto;
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.5) !important;
+    width: 100%;
 }
 
-.card-header h3 {
-    color: white;
+.card-header {
+    cursor: pointer;
 }
 
-.input-group-prepend span {
-    width: 40px;
-    background-color: #feca0a;
-    color: black;
-    border: 0 !important;
+.status-section .btn {
+    width: 100%;
+    margin-top: 10px;
 }
 
-input:focus {
-    outline: 0 0 0 0 !important;
-    box-shadow: 0 0 0 0 !important;
+.status-section ul {
+    padding-left: 0;
+    width: 100%;
+    list-style-type: none;
 }
 
-.login_btn {
-    color: black;
-    background-color: #feca0a;
-    width: 100px;
-    font-weight: bold;
+.status-section li {
+    padding-left: 0;
+    list-style-type: none;
 }
 
-.login_btn:hover {
-    color: black;
+.notes-section input {
+    margin-top: 10px;
+}
+
+.notes-section .btn {
+    margin-top: 10px;
+    margin-left: 5px;
+}
+
+textarea {
     background-color: white;
-}
-
-.links {
-    color: white;
-}
-
-.links a {
-    color: #feca0a;
-    margin-left: 10px;
 }
