--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="col-12 text-center mt-3">
             <h1>Welcome to TCWA</h1>
+            {{#each request}}
+            {{> request-block}}
+            {{/each}}
         </div>
     </div>
 </div>
