--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,11 @@
-<div class="container">
+<div class="container-lg">
     <div class="row">
         <div class="col-12 text-center mt-3">
             <h1>Welcome to TCWA</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
             {{#each request}}
             {{> request-block}}
             {{/each}}
