--- a/views/layouts/newrequest.handlebars
+++ b/views/layouts/newrequest.handlebars
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel='stylesheet' href='/assets/css/backend.css' type='text/css' />
+    <link rel='stylesheet' href='/assets/css/request.css' type='text/css' />
     <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="dashboard">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="dashboard">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="newrequest">New Request</a>
+                    <a class="nav-link" href="newrequest">New Request <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="users">Users</a>
