User role and status can now be changed from users page

--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -4,11 +4,12 @@
             <h1>Users</h1>
         </div>
     </div>
-    <table class="table">
+    <table class="table bg-white align-middle">
         <thead>
             <tr>
                 <th scope="col">User name</th>
                 <th scope="col">Email Address</th>
+                <th scope="col">Role</th>
                 <th scope="col">Status</th>
                 <th scope="col">Last Login</th>
             </tr>
