--- a/views/layouts/backend.handlebars
+++ b/views/layouts/backend.handlebars
@@ -26,9 +26,11 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="dashboard">Home <span class="sr-only">(current)</span></a>
                 </li>
+                {{#if admin}}
                 <li class="nav-item">
                     <a class="nav-link" href="users">Users</a>
                 </li>
+                {{/if}}
                 <li class="nav-item">
                     <a class="nav-link" href="logout">Logout</a>
                 </li>
