--- a/public/assets/css/backend.css
+++ b/public/assets/css/backend.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
+body{
+    background-color: rgba(0,0,0,.03);
+ }
+
 .bg-black {
     background-color: black;
 }
