--- a/views/layouts/newrequest.handlebars
+++ b/views/layouts/newrequest.handlebars
@@ -23,15 +23,17 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="dashboard">Home </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="newrequest">New Request <span class="sr-only">(current)</span></a>
                 </li>
+                {{#if admin}}
                 <li class="nav-item">
                     <a class="nav-link" href="users">Users</a>
                 </li>
+                {{/if}}
                 <li class="nav-item">
                     <a class="nav-link" href="logout">Logout</a>
                 </li>
