--- a/views/layouts/users.handlebars
+++ b/views/layouts/users.handlebars
@@ -26,9 +26,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="dashboard">Home</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="newrequest">New Request</a>
+                </li>
                 {{#if admin}}
                 <li class="nav-item active">
-                    <a class="nav-link" href="users">Users</a>
+                    <a class="nav-link" href="users">Users <span class="sr-only">(current)</a>
                 </li>
                 {{/if}}
                 <li class="nav-item">
