--- a/views/newrequest.handlebars
+++ b/views/newrequest.handlebars
@@ -158,7 +158,7 @@
                         </div>
 
                     </div>
-                    <div class="row" style="margin-top: 20px;">
+                    <div class="row" style="margin-top: 20px; margin-bottom: 20px;">
                         <div class="col-12 text-center">
                             <button type="button" class="btn btn-primary btn-lg">Submit</button>
                         </div>
