--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -1,9 +1,13 @@
-<div class="container">
-    <div class="row">
+<div class="container-fluid usersImg">
+    <div class="row centered">
         <div class="col-12 text-center mt-3">
-            <h1>Users</h1>
+            <div class="align-middle pageTitle">Users</div>
         </div>
     </div>
+</div>
+
+<div class="container">
+    
     <div class="row">
         <div class="col-12 text-center mt-3">
             <table class="table bg-dark align-middle">
