--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -7,6 +7,11 @@
     padding-top: 5px;
 }
 
+.topbar {
+    border-top: 25px solid #f0d443;
+}
+
+
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html, body {
