--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,9 +1,12 @@
-<div class="container-lg">
-    <div class="row">
+<div class="container-fluid dashboardImg">
+    <div class="row centered">
         <div class="col-12 text-center mt-3">
-            <h1>Welcome to TCWA</h1>
+            <div class="align-middle welcomeTitle">Welcome to TCWA</div>
         </div>
     </div>
+</div>
+
+<div class="container-lg">
     <div class="row">
         <div class="col-12">
             {{#each request}}
