--- a/views/layouts/newrequest.handlebars
+++ b/views/layouts/newrequest.handlebars
@@ -3,13 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Truck Center WA: Direct-Ship</title>
+    <title>Truck Centre WA: Direct-Ship</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='/assets/css/request.css' type='text/css' />
-    <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
 <body>
@@ -23,10 +22,10 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="dashboard">Home </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="newrequest">New Request <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -51,6 +50,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script src="assets/js/freight.js"></script>
+   
 </body>
 
 </html>
