--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -45,6 +45,12 @@
 
         </tbody>
     </table>
+
+    <nav aria-label="Page navigation" id="Paginate">
+        <ul class="pagination">
+            
+        </ul>
+    </nav>
 </div>
 
 <script src="assets/js/users.js" type="text/javascript"></script>
